# atlas

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  splash.txt
locales/: atlas.yaml
migrations/: 0001_init.down.sql  0001_init.up.sql
src/: auth.rs  config.rs  dto.rs  errors.rs  filters.rs  guards.rs  logging.rs  main.rs  models.rs  routing.rs  services.rs  splash.rs  web.rs
src/auth/: hive.rs  oidc.rs
src/dto/: datetime.rs  errors.rs  post.rs  posts.rs
src/guards/: context.rs  darkmode.rs  headers.rs  lang.rs  nav.rs  scheme.rs  user.rs
src/services/: posts.rs
src/templates/: calendar.rs  event.rs  feed.rs  index.rs  misc.rs  mod.rs  news.rs
src/web/: auth.rs  catchers.rs  post.rs  posts.rs
static/: main.js  style.css  styles.css
templates/: base.html.j2  breadcrumb.html  calendar_view.html  day_slot.html  default_footer.html.j2  event_card.html  figure.html  index.html  index.html.j2  month_select.html  news_card.html  pagination.html  subscribe.html.j2  utils.html.j2
templates/errors/: error.html.j2
templates/page/: base.html  calendar.html  event.html  feed.html  index.html  news.html
templates/post/: form.html.j2  post.html.j2
templates/posts/: details.html.j2  edit.html.j2  form.html.j2
