[package]
name = "atlas"
version = "0.1.0"
edition = "2024"
authors = ["Konglig Datasektionen"]
description = "News and event system"
license = "GPL-3.0-or-later"
rust-version = "1.92"

[dependencies]
askama = "0.14.0"
chrono = { version = "0.4.42", features = ["serde"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
hex = "0.4.3"
log = "0.4.29"
openidconnect = { version = "4.0.1", features = ["timing-resistant-secret-traits"] }
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rust-i18n = "3.1.5"
serde = "1.0.228"
serde_json = "1.0.145"
simplelog = "0.12.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
thiserror = "2.0.17"
