[package]
name = "atlas"
version = "0.1.0"
edition = "2024"
authors = ["Konglig Datasektionen"]
description = "News and event system"
license = "GPL-3.0-or-later"
rust-version = "1.94"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
askama = "0.15.6"
askama-filters = { version = "0.1.3", features = ["date"] }
askama_macros = "0.15.6"
askama_web = { version = "0.15.2", features = ["actix-web-4"] }
chrono = { version = "0.4.44", features = ["serde"] }
comrak = "0.52.0"
log = "0.4.29"
markdown = "1.0.0"
num-traits = "0.2.19"
openidconnect = { version = "4.0.1", features = ["timing-resistant-secret-traits"] }
rand = "0.10.1"
regex = "1.12.3"
rust-i18n = "3.1.5"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"

[profile.dev.package.askama_derive]
opt-level = 3
